Fix startup of TC writer, improve ClassFinder, java 11